--- a/saved_subjects.html
+++ b/saved_subjects.html
@@ -46,270 +46,277 @@
                   document.querySelector('.search-icon').focus()
                 }
               </script>
+  </div>
+
+  <div class="search-result_bar">
+    <ul>
+      <li class="search-result_item">
+        <div class="left">
+          <img src="img/class_cover_1.jpg" alt="">
+        </div>
+
+        <div class="right">
+          <div class="top">
+            <h4>Physics 1st Paper<h4>
+          </div>
+
+          <div class="bottom">
+            <div class="left progress_cont">
+              <div class="progress-bar">
+                <div class="bar"></div>
+              </div>
+              <p>40%</p>
+            </div>
+          </div>
+
+          <div class="more-bottom info_bar">
+            <div class="total_notes">
+              <svg>
+                <use href="icons.svg#icon__pages"></use>
+              </svg>
+
+              <p>32</p>
             </div>
 
-            <div class="search-result_bar">
-              <ul>
-                <li class="search-result_item">
-                  <div class="left">
-                    <img src="img/class_cover_1.jpg" alt="">
-                  </div>
+            <div class="total_classes">
+              <svg>
+                <use href="icons.svg#icon__class"></use>
+              </svg>
 
-                  <div class="right">
-                    <div class="top">
-                      <h4>Physics 1st Paper<h4>
-                    </div>
-
-                    <div class="bottom">
-                      <div class="left">
-                        <div class="progress-bar">
-                          <div class="bar"></div>
-                        </div>
-                        <p>40%</p>
-                      </div>
-                    </div>
-
-                    <div class="more-bottom">
-                      <div class="total_notes">
-                        <svg>
-                          <use href="icons.svg#icon__pages"></use>
-                        </svg>
-
-                        <p>32</p>
-                      </div>
-
-                      <div class="total_classes">
-                        <svg>
-                          <use href="icons.svg#icon__class"></use>
-                        </svg>
-
-                        <p>22</p>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-
-                <li class="search-result_item">
-                  <div class="left">
-                    <img src="img/class_cover_1.jpg" alt="">
-                  </div>
-
-                  <div class="right">
-                    <div class="top">
-                      <h4>Physics 1st Paper<h4>
-                    </div>
-
-                    <div class="bottom">
-                      <div class="left">
-                        <div class="progress-bar">
-                          <div class="bar"></div>
-                        </div>
-                        <p>40%</p>
-                      </div>
-                    </div>
-
-                    <div class="more-bottom">
-                      <div class="total_notes">
-                        <svg>
-                          <use href="icons.svg#icon__pages"></use>
-                        </svg>
-
-                        <p>32</p>
-                      </div>
-
-                      <div class="total_classes">
-                        <svg>
-                          <use href="icons.svg#icon__class"></use>
-                        </svg>
-
-                        <p>22</p>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-
-                <li class="search-result_item">
-                  <div class="left">
-                    <img src="img/class_cover_1.jpg" alt="">
-                  </div>
-
-                  <div class="right">
-                    <div class="top">
-                      <h4>Physics 1st Paper<h4>
-                    </div>
-
-                    <div class="bottom">
-                      <div class="left">
-                        <div class="progress-bar">
-                          <div class="bar"></div>
-                        </div>
-                        <p>40%</p>
-                      </div>
-                    </div>
-
-                    <div class="more-bottom">
-                      <div class="total_notes">
-                        <svg>
-                          <use href="icons.svg#icon__pages"></use>
-                        </svg>
-
-                        <p>32</p>
-                      </div>
-
-                      <div class="total_classes">
-                        <svg>
-                          <use href="icons.svg#icon__class"></use>
-                        </svg>
-
-                        <p>22</p>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-
-                <li class="search-result_item">
-                  <div class="left">
-                    <img src="img/class_cover_1.jpg" alt="">
-                  </div>
-
-                  <div class="right">
-                    <div class="top">
-                      <h4>Physics 1st Paper<h4>
-                    </div>
-
-                    <div class="bottom">
-                      <div class="left">
-                        <div class="progress-bar">
-                          <div class="bar"></div>
-                        </div>
-                        <p>40%</p>
-                      </div>
-                    </div>
-
-                    <div class="more-bottom">
-                      <div class="total_notes">
-                        <svg>
-                          <use href="icons.svg#icon__pages"></use>
-                        </svg>
-
-                        <p>32</p>
-                      </div>
-
-                      <div class="total_classes">
-                        <svg>
-                          <use href="icons.svg#icon__class"></use>
-                        </svg>
-
-                        <p>22</p>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-
-                <li class="search-result_item">
-                  <div class="left">
-                    <img src="img/class_cover_1.jpg" alt="">
-                  </div>
-
-                  <div class="right">
-                    <div class="top">
-                      <h4>Physics 1st Paper<h4>
-                    </div>
-
-                    <div class="bottom">
-                      <div class="left">
-                        <div class="progress-bar">
-                          <div class="bar"></div>
-                        </div>
-                        <p>40%</p>
-                      </div>
-                    </div>
-
-                    <div class="more-bottom">
-                      <div class="total_notes">
-                        <svg>
-                          <use href="icons.svg#icon__pages"></use>
-                        </svg>
-
-                        <p>32</p>
-                      </div>
-
-                      <div class="total_classes">
-                        <svg>
-                          <use href="icons.svg#icon__class"></use>
-                        </svg>
-
-                        <p>22</p>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-
-                <li class="search-result_item search-result-item__chapter">
-                  <div class="left">
-                    <img src="img/class_cover_1.jpg" alt="">
-                  </div>
-
-                  <div class="right">
-                    <div class="top">
-                      <h4>Physics 1st Paper<h4>
-                    </div>
-
-                    <div class="bottom">
-                      <div class="left">
-                        <p>Chapter 1: Thermodynamics</p>
-                      </div>
-                    </div>
-
-                    <div class="more-bottom">
-                      <div class="total_notes">
-                        <svg>
-                          <use href="icons.svg#icon__pages"></use>
-                        </svg>
-
-                        <p>32</p>
-                      </div>
-
-                      <div class="total_classes">
-                        <svg>
-                          <use href="icons.svg#icon__class"></use>
-                        </svg>
-
-                        <p>22</p>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-              </ul>
+              <p>22</p>
             </div>
-          </li>
+          </div>
+        </div>
+      </li>
 
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
+      <li class="search-result_item">
+        <div class="left">
+          <img src="img/class_cover_1.jpg" alt="">
+        </div>
 
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Feed</a>
-          </li>
+        <div class="right">
+          <div class="top">
+            <h4>Physics 1st Paper<h4>
+          </div>
 
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Subjects</a>
-          </li>
+          <div class="bottom">
+            <div class="left progress_cont">
+              <div class="progress-bar">
+                <div class="bar"></div>
+              </div>
+              <p>40%</p>
+            </div>
+          </div>
 
-          <li class="nav-item active">
-            <a class="nav-link active" href="#">Saved</a>
-          </li>
+          <div class="more-bottom info_bar">
+            <div class="total_notes">
+              <svg>
+                <use href="icons.svg#icon__pages"></use>
+              </svg>
 
-          <li class="nav-item-profile">
-            <a class="nav-link active" href="#"><img class="img-fluid rounded-circle" src="img/profile_image.jpg"
-                alt="Profile"></a>
-          </li>
-        </ul>
+              <p>32</p>
+            </div>
+
+            <div class="total_classes">
+              <svg>
+                <use href="icons.svg#icon__class"></use>
+              </svg>
+
+              <p>22</p>
+            </div>
+          </div>
+        </div>
+      </li>
+
+      <li class="search-result_item">
+        <div class="left">
+          <img src="img/class_cover_1.jpg" alt="">
+        </div>
+
+        <div class="right">
+          <div class="top">
+            <h4>Physics 1st Paper<h4>
+          </div>
+
+          <div class="bottom">
+            <div class="left progress_cont">
+              <div class="progress-bar">
+                <div class="bar"></div>
+              </div>
+              <p>40%</p>
+            </div>
+          </div>
+
+          <div class="more-bottom info_bar">
+            <div class="total_notes">
+              <svg>
+                <use href="icons.svg#icon__pages"></use>
+              </svg>
+
+              <p>32</p>
+            </div>
+
+            <div class="total_classes">
+              <svg>
+                <use href="icons.svg#icon__class"></use>
+              </svg>
+
+              <p>22</p>
+            </div>
+          </div>
+        </div>
+      </li>
+
+      <li class="search-result_item">
+        <div class="left">
+          <img src="img/class_cover_1.jpg" alt="">
+        </div>
+
+        <div class="right">
+          <div class="top">
+            <h4>Physics 1st Paper<h4>
+          </div>
+
+          <div class="bottom">
+            <div class="left progress_cont">
+              <div class="progress-bar">
+                <div class="bar"></div>
+              </div>
+              <p>40%</p>
+            </div>
+          </div>
+
+          <div class="more-bottom info_bar">
+            <div class="total_notes">
+              <svg>
+                <use href="icons.svg#icon__pages"></use>
+              </svg>
+
+              <p>32</p>
+            </div>
+
+            <div class="total_classes">
+              <svg>
+                <use href="icons.svg#icon__class"></use>
+              </svg>
+
+              <p>22</p>
+            </div>
+          </div>
+        </div>
+      </li>
+
+      <li class="search-result_item">
+        <div class="left">
+          <img src="img/class_cover_1.jpg" alt="">
+        </div>
+
+        <div class="right">
+          <div class="top">
+            <h4>Physics 1st Paper<h4>
+          </div>
+
+          <div class="bottom">
+            <div class="left progress_cont">
+              <div class="progress-bar">
+                <div class="bar"></div>
+              </div>
+              <p>40%</p>
+            </div>
+          </div>
+
+          <div class="more-bottom info_bar">
+            <div class="total_notes">
+              <svg>
+                <use href="icons.svg#icon__pages"></use>
+              </svg>
+
+              <p>32</p>
+            </div>
+
+            <div class="total_classes">
+              <svg>
+                <use href="icons.svg#icon__class"></use>
+              </svg>
+
+              <p>22</p>
+            </div>
+          </div>
+        </div>
+      </li>
+
+      <li class="search-result_item search-result-item__chapter">
+        <div class="left">
+          <img src="img/class_cover_1.jpg" alt="">
+        </div>
+
+        <div class="right">
+          <div class="top">
+            <h4>Physics 1st Paper<h4>
+          </div>
+
+          <div class="bottom">
+            <p>Chapter 1: Thermodynamics</p>
+          </div>
+
+          <div class="more-bottom info_bar">
+            <div class="total_notes">
+              <svg>
+                <use href="icons.svg#icon__pages"></use>
+              </svg>
+
+              <p>32</p>
+            </div>
+
+            <div class="total_classes">
+              <svg>
+                <use href="icons.svg#icon__class"></use>
+              </svg>
+
+              <p>22</p>
+            </div>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+  </li>
+
+  <li class="nav-item active">
+    <a class="nav-link active" aria-current="page" href="#">Home</a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="#">Feed</a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Subjects</a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Saved</a>
+  </li>
+
+  <li class="nav-item-profile">
+    <a class="nav-link active" href="#"><img class="img-fluid rounded-circle" src="img/profile_image.jpg"
+        alt="Profile"></a>
+  </li>
+  </ul>
+  </div>
+  </div>
+  </nav>
+  <section class="mobile-on-mobile">
+    <div class="search_mobile fixed">
+      <div class="search_bar_mobile">
+        <input class="search-input-mobile" type="text" placeholder="Search for a subject or a chapter">
+        <svg class="search-icon">
+          <use href="icons.svg#icon__search"></use>
+        </svg>
       </div>
     </div>
 
-
-    <div class="bottom-nav">
+    <div class="bottom-nav ">
       <ul>
         <!-- <li>
           <p>English</p>
@@ -466,7 +473,9 @@
       </div>
 
     </div>
-  </nav>
+  </section>
+
+  <!-- Navbar End -->
 
   <div class="subject__cont">
     <header>
@@ -474,7 +483,7 @@
     </header>
 
     <main>
-      <h2>Choose any subject to view saved notes and classes</h2>
+      <h2 class="header-description">Choose any subject to view saved notes and classes</h2>
 
       <main class="subjects">
         <ul>
