Subjects page responsive completed

--- a/registration.html
+++ b/registration.html
@@ -57,7 +57,7 @@
                     </div>
 
                     <div class="bottom">
-                      <div class="left">
+                      <div class="left progress_cont">
                         <div class="progress-bar">
                           <div class="bar"></div>
                         </div>
@@ -65,7 +65,7 @@
                       </div>
                     </div>
 
-                    <div class="more-bottom">
+                    <div class="more-bottom info_bar">
                       <div class="total_notes">
                         <svg>
                           <use href="icons.svg#icon__pages"></use>
@@ -96,7 +96,7 @@
                     </div>
 
                     <div class="bottom">
-                      <div class="left">
+                      <div class="left progress_cont">
                         <div class="progress-bar">
                           <div class="bar"></div>
                         </div>
@@ -104,7 +104,7 @@
                       </div>
                     </div>
 
-                    <div class="more-bottom">
+                    <div class="more-bottom info_bar">
                       <div class="total_notes">
                         <svg>
                           <use href="icons.svg#icon__pages"></use>
@@ -135,7 +135,7 @@
                     </div>
 
                     <div class="bottom">
-                      <div class="left">
+                      <div class="left progress_cont">
                         <div class="progress-bar">
                           <div class="bar"></div>
                         </div>
@@ -143,7 +143,7 @@
                       </div>
                     </div>
 
-                    <div class="more-bottom">
+                    <div class="more-bottom info_bar">
                       <div class="total_notes">
                         <svg>
                           <use href="icons.svg#icon__pages"></use>
@@ -174,7 +174,7 @@
                     </div>
 
                     <div class="bottom">
-                      <div class="left">
+                      <div class="left progress_cont">
                         <div class="progress-bar">
                           <div class="bar"></div>
                         </div>
@@ -182,7 +182,7 @@
                       </div>
                     </div>
 
-                    <div class="more-bottom">
+                    <div class="more-bottom info_bar">
                       <div class="total_notes">
                         <svg>
                           <use href="icons.svg#icon__pages"></use>
@@ -213,7 +213,7 @@
                     </div>
 
                     <div class="bottom">
-                      <div class="left">
+                      <div class="left progress_cont">
                         <div class="progress-bar">
                           <div class="bar"></div>
                         </div>
@@ -221,7 +221,7 @@
                       </div>
                     </div>
 
-                    <div class="more-bottom">
+                    <div class="more-bottom info_bar">
                       <div class="total_notes">
                         <svg>
                           <use href="icons.svg#icon__pages"></use>
@@ -252,12 +252,10 @@
                     </div>
 
                     <div class="bottom">
-                      <div class="left">
-                        <p>Chapter 1: Thermodynamics</p>
-                      </div>
+                      <p>Chapter 1: Thermodynamics</p>
                     </div>
 
-                    <div class="more-bottom">
+                    <div class="more-bottom info_bar">
                       <div class="total_notes">
                         <svg>
                           <use href="icons.svg#icon__pages"></use>
@@ -280,7 +278,7 @@
             </div>
           </li>
 
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
 
@@ -295,20 +293,182 @@
           <li class="nav-item">
             <a class="nav-link active" href="#">Saved</a>
           </li>
-
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Log in</a>
+          
+          <li class="nav-item-profile">
+            <a class="nav-link active" href="#"><img class="img-fluid rounded-circle"
+                src="img/profile_image.jpg" alt="Profile"></a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
+  <section class="mobile-on-mobile">
+    <div class="search_mobile fixed">
+      <div class="search_bar_mobile">
+        <input class="search-input-mobile" type="text" placeholder="Search for a subject or a chapter">
+        <svg class="search-icon" >
+          <use href="icons.svg#icon__search"></use>
+        </svg>
+      </div>
+    </div>
+
+    <div class="bottom-nav ">
+      <ul>
+        <!-- <li>
+          <p>English</p>
+        </li> -->
+
+        <li>
+          <svg>
+            <use href="icons.svg#icon__heart"></use>
+          </svg>
+        </li>
+
+        <li>
+          <svg>
+            <use href="icons.svg#icon__notification"></use>
+          </svg>
+        </li>
+      </ul>
+
+      <div class="notification_bar">
+        <ul>
+          <li class="notification" style="background: #fff">
+            <div class="left">
+              <img src="img/profile_image.jpg" alt="">
+            </div>
+
+            <div class="right">
+              <div class="left">
+                <h6><span class="blue_span">Sakib Ul Hasan</span> loved your notes on <span class="blue_span">Chapter 1: Thermodynamics</span> of <span class="blue_span">Physics 1st paper</span></h6>
+
+                <p>1 minute ago</p>
+              </div>
+
+              <div class="right">
+                <div class="blue-circle"></div>
+              </div>
+            </div>
+          </li>
+
+          <li class="notification" style="background: #fff">
+            <div class="left">
+              <img src="img/profile_image.jpg" alt="">
+            </div>
+
+            <div class="right">
+              <div class="left">
+                <h6><span class="blue_span">Sakib Ul Hasan</span> loved your notes on <span class="blue_span">Chapter 1: Thermodynamics</span> of <span class="blue_span">Physics 1st paper</span></h6>
+
+                <p>1 minute ago</p>
+              </div>
+
+              <div class="right">
+                <div class="blue-circle"></div>
+              </div>
+            </div>
+          </li>
+
+          <li class="notification">
+            <div class="left">
+              <img src="img/profile_image.jpg" alt="">
+            </div>
+
+            <div class="right">
+              <div class="left">
+                <h6><span class="blue_span">Sakib Ul Hasan</span> loved your notes on <span class="blue_span">Chapter 1: Thermodynamics</span> of <span class="blue_span">Physics 1st paper</span></h6>
+
+                <p>1 minute ago</p>
+              </div>
+
+              <div class="right">
+
+              </div>
+            </div>
+          </li>
+
+          <li class="notification">
+            <div class="left">
+              <img src="img/profile_image.jpg" alt="">
+            </div>
+
+            <div class="right">
+              <div class="left">
+                <h6><span class="blue_span">Sakib Ul Hasan</span> loved your notes on <span class="blue_span">Chapter 1: Thermodynamics</span> of <span class="blue_span">Physics 1st paper</span></h6>
+
+                <p>1 minute ago</p>
+              </div>
+
+              <div class="right">
+
+              </div>
+            </div>
+          </li>
+
+          <li class="notification">
+            <div class="left">
+              <img src="img/profile_image.jpg" alt="">
+            </div>
+
+            <div class="right">
+              <div class="left">
+                <h6><span class="blue_span">Sakib Ul Hasan</span> loved your notes on <span class="blue_span">Chapter 1: Thermodynamics</span> of <span class="blue_span">Physics 1st paper</span></h6>
+
+                <p>1 minute ago</p>
+              </div>
+
+              <div class="right">
+
+              </div>
+            </div>
+          </li>
+
+          <li class="notification">
+            <div class="left">
+              <img src="img/profile_image.jpg" alt="">
+            </div>
+
+            <div class="right">
+              <div class="left">
+                <h6><span class="blue_span">Sakib Ul Hasan</span> loved your notes on <span class="blue_span">Chapter 1: Thermodynamics</span> of <span class="blue_span">Physics 1st paper</span></h6>
+
+                <p>1 minute ago</p>
+              </div>
+
+              <div class="right">
+
+              </div>
+            </div>
+          </li>
+
+          <li class="notification">
+            <div class="left">
+              <img src="img/profile_image.jpg" alt="">
+            </div>
+
+            <div class="right">
+              <div class="left">
+                <h6><span class="blue_span">Sakib Ul Hasan</span> loved your notes on <span class="blue_span">Chapter 1: Thermodynamics</span> of <span class="blue_span">Physics 1st paper</span></h6>
+
+                <p>1 minute ago</p>
+              </div>
+
+              <div class="right">
+
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+  </section>
   
   <section class="vh-100 reg__cont">
     <div class="container-fluid h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         
-        <div class="col-md-9 col-lg-6 col-xl-5">
+        <div class="col-md-9 col-lg-6 col-xl-5 reg-intro_cont">
           <header class="welcome-text">
             <h2>WELCOME TO</h2>
             <h1 class="header-h1">Shohopath!</h1>
