Notes class page completed responsive

--- a/notes_classes.html
+++ b/notes_classes.html
@@ -349,22 +349,22 @@
 							<p>142</p>
 						</div>
 					</div>
-				</div>
-				
 
-				<div class="bottom top__small-box">
-					<h4>You have completed this chapter!</h4>
-
-					<div class="completion_buttons">
-						<svg>
-							<use href="./icons.svg#icon__check-circle-fill"></use>
-						</svg>
-
-						<svg>
-							<use href="./icons.svg#icon__cross-circle"></use>
-						</svg>
+					<div class="top__small-box info-box completion-box">
+						<h4>You have completed this chapter!</h4>
+	
+						<div class="completion_buttons">
+							<svg>
+								<use href="./icons.svg#icon__check-circle-fill"></use>
+							</svg>
+	
+							<svg>
+								<use href="./icons.svg#icon__cross-circle"></use>
+							</svg>
+						</div>
 					</div>
 				</div>
+				
 			</div>	
 
 				<!-- <div class="top">
