All responsive completed except nav bar

--- a/home.html
+++ b/home.html
@@ -508,7 +508,7 @@
     </header>
 
     <main>
-      <ul>
+      <ul class="upload_list">
         <li class="recently-viewed-post upload">
           <header>
             <!-- <p class="subject">Physics 1st Paper</p> -->
@@ -710,7 +710,7 @@
     
 
     <main>
-      <ul>
+      <ul class="upload_list">
         <li class="recently-viewed-post upload">
           <header>
             <!-- <p class="subject">Physics 1st Paper</p> -->
