--- a/notes_classes.html
+++ b/notes_classes.html
@@ -616,7 +616,7 @@
 			</header>
 
 			<main class="subjects">
-				<ul>
+				<ul class="upload_list">
 					<li class="recently-viewed-post upload">
 						<header>
 							<!-- <p class="subject">Physics 1st Paper</p> -->
