--- a/profile.html
+++ b/profile.html
@@ -503,36 +503,36 @@
             <p>sakibulhasan159@gmail.com</p>
           </div>
         </div>
-  
+
         <div class="profile__small-box">
           <div class="upload-info profile-info">
             <div>
               <p>Total uploads</p>
               <p>12</p>
             </div>
-  
+
             <div>
               <p>Notes </p>
               <p>2</p>
             </div>
-  
+
             <div>
               <p>Classes </p>
               <p>10</p>
             </div>
           </div>
         </div>
-  
+
         <div class="profile__small-box trophy__small-box">
           <div class="profile-info">
             <img src="img/trophy.png" alt="">
-  
+
             <h2>456</h2>
           </div>
         </div>
       </div>
     </div>
-    
+
 
     <!-- Uploads Start -->
     <div class="profile__uploads">
@@ -541,7 +541,7 @@
       </header>
 
       <div class="uploads-list">
-        <ul>
+        <ul class="upload_list">
           <li class="recently-viewed-post upload">
             <header>
               <!-- <p class="subject">Physics 1st Paper</p> -->
@@ -551,11 +551,10 @@
 
             <footer>
               <div class="bottom">
-                <div class="left">
-                  <div class="right">
-                    <h4 class="upload__subject">Physics 1st Paper</h2>
-                      <p class="upload__chapter">Chapter 1: Thermodynamics</p>
-                  </div>
+                <div class="left unfinished-dots">
+                  <h4 class="upload__subject unfinished-dots">Physics 1st Paper</h2>
+                    <p class="upload__chapter unfinished-dots">Chapter 1: Thermodynamics</p>
+
                 </div>
 
                 <div class="right">
@@ -579,11 +578,10 @@
 
             <footer>
               <div class="bottom">
-                <div class="left">
-                  <div class="right">
-                    <h4 class="upload__subject">Physics 1st Paper</h2>
-                      <p class="upload__chapter">Chapter 1: Thermodynamics</p>
-                  </div>
+                <div class="left unfinished-dots">
+                  <h4 class="upload__subject unfinished-dots">Physics 1st Paper</h2>
+                    <p class="upload__chapter unfinished-dots">Chapter 1: Thermodynamics</p>
+
                 </div>
 
                 <div class="right">
@@ -629,11 +627,10 @@
 
             <footer>
               <div class="bottom">
-                <div class="left">
-                  <div class="right">
-                    <h4 class="upload__subject">Physics 1st Paper</h2>
-                      <p class="upload__chapter">Chapter 1: Thermodynamics</p>
-                  </div>
+                <div class="left unfinished-dots">
+                  <h4 class="upload__subject unfinished-dots">Physics 1st Paper</h2>
+                    <p class="upload__chapter unfinished-dots">Chapter 1: Thermodynamics</p>
+
                 </div>
 
                 <div class="right">
@@ -657,11 +654,10 @@
 
             <footer>
               <div class="bottom">
-                <div class="left">
-                  <div class="right">
-                    <h4 class="upload__subject">Physics 1st Paper</h2>
-                      <p class="upload__chapter">Chapter 1: Thermodynamics</p>
-                  </div>
+                <div class="left unfinished-dots">
+                  <h4 class="upload__subject unfinished-dots">Physics 1st Paper</h2>
+                    <p class="upload__chapter unfinished-dots">Chapter 1: Thermodynamics</p>
+
                 </div>
 
                 <div class="right">
@@ -685,11 +681,10 @@
 
             <footer>
               <div class="bottom">
-                <div class="left">
-                  <div class="right">
-                    <h4 class="upload__subject">Physics 1st Paper</h2>
-                      <p class="upload__chapter">Chapter 1: Thermodynamics</p>
-                  </div>
+                <div class="left unfinished-dots">
+                  <h4 class="upload__subject unfinished-dots">Physics 1st Paper</h2>
+                    <p class="upload__chapter unfinished-dots">Chapter 1: Thermodynamics</p>
+
                 </div>
 
                 <div class="right">
@@ -713,11 +708,10 @@
 
             <footer>
               <div class="bottom">
-                <div class="left">
-                  <div class="right">
-                    <h4 class="upload__subject">Physics 1st Paper</h2>
-                      <p class="upload__chapter">Chapter 1: Thermodynamics</p>
-                  </div>
+                <div class="left unfinished-dots">
+                  <h4 class="upload__subject unfinished-dots">Physics 1st Paper</h2>
+                    <p class="upload__chapter unfinished-dots">Chapter 1: Thermodynamics</p>
+
                 </div>
 
                 <div class="right">
@@ -741,11 +735,10 @@
 
             <footer>
               <div class="bottom">
-                <div class="left">
-                  <div class="right">
-                    <h4 class="upload__subject">Physics 1st Paper</h2>
-                      <p class="upload__chapter">Chapter 1: Thermodynamics</p>
-                  </div>
+                <div class="left unfinished-dots">
+                  <h4 class="upload__subject unfinished-dots">Physics 1st Paper</h2>
+                    <p class="upload__chapter unfinished-dots">Chapter 1: Thermodynamics</p>
+
                 </div>
 
                 <div class="right">
@@ -769,11 +762,10 @@
 
             <footer>
               <div class="bottom">
-                <div class="left">
-                  <div class="right">
-                    <h4 class="upload__subject">Physics 1st Paper</h2>
-                      <p class="upload__chapter">Chapter 1: Thermodynamics</p>
-                  </div>
+                <div class="left unfinished-dots">
+                  <h4 class="upload__subject unfinished-dots">Physics 1st Paper</h2>
+                    <p class="upload__chapter unfinished-dots">Chapter 1: Thermodynamics</p>
+
                 </div>
 
                 <div class="right">
