--- a/saved_subjects.html
+++ b/saved_subjects.html
@@ -486,7 +486,7 @@
       <h2 class="header-description">Choose any subject to view saved notes and classes</h2>
 
       <main class="subjects">
-        <ul>
+        <ul class="upload_list">
           <li class="subject upload">
             <header>
               <img src="img/note_cover_2.jpg" alt="">
