--- a/subjects.html
+++ b/subjects.html
@@ -541,7 +541,7 @@
 
     <main>
       <main class="subjects">
-        <ul>
+        <ul class="upload_list">
           <li class="subject upload">
             <header>
               <img src="img/note_cover_2.jpg" alt="">
